--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,5 +40,5 @@ add_executable(${PROJECT_NAME}
 )
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE .)
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wno-sign-compare)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wno-sign-compare -Wno-missing-field-initializers)
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib)
